--- a/public/css/meter.css
+++ b/public/css/meter.css
@@ -58,3 +58,10 @@ input {
   font-size: 180px !important;
 }
 
+p {
+  color: #666;
+  text-align: center;
+  margin-top: -175px;
+  font-size: 16px;
+  font-family: "ProximaNova Light";
+}
